# tp-c-Dylan-1801

./: CMakeLists.txt  README.md  book.cpp  filemanager.cpp  filemanager.h  library.cpp  library.h  logactivity.cpp  logactivity.h  main.cpp
data/: books.txt
